# customTRENDplotter

./: .readthedocs.yaml  README.md  pyproject.toml  requirements.txt
docs/: .readthedocs.yaml
docs/source/: conf.py  index.md  index.rst  src.md  src.rst  usage.md
docs/source/notebooks/: Example 3.md  tutorial.ipynb
src/: TREND2df.py  customfluid.py
